2011-02-06  John W. Eaton  <jwe@octave.org>

	* interpreter/contributors.in: Add Fotios Kasolis to the list.

2010-02-05  Rik  <octave@nomad.inbox5.com>

	* interpreter/doccheck/mk_undocumented_list: Add dbnext, alias for
	dbstep, to functions not requiring a docstring.

2010-02-05  Rik  <octave@nomad.inbox5.com>

	* interpreter/doccheck/aspell-octave.en.pws: Add new spelling
	exceptions to Octave private dictionary.

2010-02-05  Rik  <octave@nomad.inbox5.com>

	* interpreter/octave.texi: Update copyright on manual to 2011.

2010-02-05  Rik  <octave@nomad.inbox5.com>

	* interpreter/mkoctfile.1, interpreter/octave-config.1,
	interpreter/octave.1: Overhaul man pages for release 3.4.

2010-02-04  Rik  <octave@nomad.inbox5.com>

	* icons/octave-logo.ico: Add logo format left out of last changeset.

2010-02-04  Rik  <octave@nomad.inbox5.com>

	* icons/: New directory for icons and .desktop files.
	* icons/octave-logo.png, icons/octave-logo.svg: Add new Octave O logo
	to Mercurial.
	* Makefile.am: New Makefile to build .desktop file and distribute logos.
	* octave.desktop.in, octave-sombrero.png: Moved from examples directory.
	* octave_branding_samples.svg: Original logos and branding material for
	Octave.  This file is not distributed.

	* interpreter/octave.texi: Use new O logo on title page.
	* interpreter/octave_logo.eps: O logo in eps form for Postscript output.
	* interpreter/octave_logo.pdf: O logo in pdf form for pdf output.

2011-01-30  Rik  <octave@nomad.inbox5.com>

	* interpreter/Makefile.am: Use pattern-style rules to make .texi files
	rather than older suffix-style rules.

2011-01-30  Rik  <octave@nomad.inbox5.com>

	* interpreter/octave.texi: Add new section
	"Customizing Toolkit Behavior"

	* interpreter/plot.txi: Add functions gnuplot_binary, mouse_wheel_zoom,
	and gui_mode to new section.

2011-01-30  Rik  <octave@nomad.inbox5.com>

	* interpreter/optim.txi: Deprecate glpkmex function and remove
	from documentation.
