@@ -21,7 +21,7 @@
 ## Return the Rosser matrix.  This is a difficult test case used to evaluate
 ## eigenvalue algorithms.
 ##
-## @seealso{hankel, vander, sylvester_matrix, hilb, invhilb, toeplitz
+## @seealso{hankel, vander, sylvester_matrix, hilb, invhilb, toeplitz,
 ##          hadamard, wilkinson, compan, pascal}
 ## @end deftypefn
 
